tests/testfiles/passing/invalid_identifiers/keyword_as_id_if.c
/* Keyword as identifier: if */
int main() {
    int if;
}